@@ -1,3 +1,11 @@
+2010-11-07  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/document.c:
+   Make use_safe_file_saving hidden pref apply even when GIO is
+   available, because g_file_replace_contents() doesn't handle disk
+   space exhaustion.
+
+
 2010-11-04  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/filetypes.c:
